# gustudio-player

./: .gitignore  CLAUDE.md  PROMPTS.md  package-lock.json  package.json  vite.config.js
.github/workflows/: build-macos.yml  build-players.yml  build-windows.yml
brands/: funside.json  gustracks.json  professione-casa.json
src/: index.html  main.js  style.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.oneradio.conf.json  tauri.romantica.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: funside.icns  oneradio.icns  romantica.icns
src-tauri/src/: artwork.rs  icy.rs  main.rs  mpv.rs  telemetry.rs
src/public/: funside.json  professione-casa.json  romantica.json
