[package]
name = "gustudio-player"
version = "0.1.0"
description = "GUStudio Radio Player"
authors = ["GUStudio79"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[[bin]]
name = "gustudio-player"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [ "tray-icon"] }
tauri-plugin-fs = "2"
tauri-plugin-http = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"
bytes = "1"
sha2 = "0.10"
hex = "0.4"
dirs = "5"
urlencoding = "2"
hostname = "0.4"
mac_address = "1.1"
os_info = "3"
chrono = { version = "0.4", features = ["serde"] }
rustfft = "6"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
